added media queries

--- a/index.html
+++ b/index.html
@@ -10,23 +10,28 @@
 
 <body>
     <header class="tab">
-        <div class="img">
-            <!-- <img class="logo" src="downloaded_img/unnamed_01.jpg" /> -->
+        <div class="account">
+            <div class="img">
+                <img class="logo" src="downloaded_img/unnamed_01.jpg" />
+            </div>
+            <div class="name">
+                Name_of_the_website
+            </div>
         </div>
-        <div class="name">
-            Name_of_the_website
-        </div>
+
         <nav class="nav_bar">
-            <ul class="list">
-                <li class="nav_li"><a>lorem</a></li>
+            <ul class="nav_ul">
                 <li class="nav_li"><a>lorem</a></li>
                 <li class="nav_li"><a>lorem</a></li>
                 <li class="nav_li"><a>lorem</a></li>
                 <li class="nav_li"><a>lorem</a></li>
             </ul>
         </nav>
-        <div class="login">login</div>
-        <div class="login">sign up</div>
+        <div class="account">
+            <div class="login">login</div>
+            <div class="login">sign up</div>
+        </div>
+
     </header>
 
     <!-- <aside class="side_nav"> 
@@ -46,111 +51,166 @@
 
     <main class="body">
         <section class="about">
-            <h1>About</h1>
-            <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Est at nulla ut. Sit dolorem qui labore, dolore
-                voluptatibus dolor provident quo vel cupiditate. Vero similique atque laudantium, culpa corrupti quasi.
-            </p>
+            <div class="abt_head">
+                <h1 class="top">Welcome to </h1>
+                <h1 class="mid">The world of Coding</h1>
+            </div>
+
+            <div class="abt_div_content">
+
+                <p class="about_p_content">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Est at nulla ut.
+                    Sit
+                    dolorem qui labore, dolore
+                    voluptatibus dolor provident quo vel cupiditate. Vero similique atque laudantium, culpa corrupti
+                    quasi. Lorem ipsum dolor sit amet consectetur adipisicing elit. Culpa eius, incidunt nesciunt minus
+                    ut omnis. Blanditiis debitis similique asperiores recusandae amet dignissimos quaerat ipsa ab
+                    quisquam deserunt a sapiente nemo ullam quasi quo illo omnis minima quibusdam mollitia, error
+                    consectetur minus repellat quia. Cumque tenetur quisquam asperiores. Consectetur soluta non
+                    similique dolorem velit ducimus? Debitis minus totam eos. Voluptatum, est?
+                </p>
+            </div>
         </section>
 
         <section class="ele_box">
 
 
-                <div class="elements hckthon">
-                    <div><img src="" /></div>
-                    <h1 class="ele_head">lorem1</h1>
-                    <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Minima, delectus totam quis veritatis
-                        praesentium aliquam nobis natus id magni eius nostrum repellat doloribus explicabo non
-                        exercitationem velit ipsa, quidem, quo similique ex porro laboriosam veniam?</p>
+            <div class="elements hckthon">
+                <div class="ele_div_img"><img src="downloaded_img/image_placeholder.png" class="ele_img" /></div>
+                <h1 class="ele_head">lorem1</h1>
+                <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Minima, delectus totam quis veritatis
+                    praesentium aliquam nobis natus id magni eius nostrum repellat doloribus explicabo non
+                    exercitationem velit ipsa, quidem, quo similique ex porro laboriosam veniam?</p>
+                <div class="goto">
+                    <a>Go to the website</a>
+                    <img src="downloaded_img/angle-bracket-right-angle-symbol-angle.jpg" class="goto_icon" />
                 </div>
-                <div class="elements web">
-                    <img src="" />
-                    <h1 class="ele_head">lorem2</h1>
-                    <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Minima, delectus totam quis veritatis
-                        praesentium aliquam nobis natus id magni eius nostrum repellat doloribus explicabo non
-                        exercitationem velit ipsa, quidem, quo similique ex porro laboriosam veniam?</p>
+            </div>
+            <div class="elements web">
+                <img src="downloaded_img/image_placeholder.png" class="ele_img" />
+                <h1 class="ele_head">lorem2</h1>
+                <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Minima, delectus totam quis veritatis
+                    praesentium aliquam nobis natus id magni eius nostrum repellat doloribus explicabo non
+                    exercitationem velit ipsa, quidem, quo similique ex porro laboriosam veniam?</p>
+                <div class="goto">
+                    <a>Go to the website</a>
+                    <img src="downloaded_img/angle-bracket-right-angle-symbol-angle.jpg" class="goto_icon" />
                 </div>
-                <div class="elements dsa">
-                    <img src="" />
-                    <h1 class="ele_head">lorem3</h1>
-                    <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Minima, delectus totam quis veritatis
-                        praesentium aliquam nobis natus id magni eius nostrum repellat doloribus explicabo non
-                        exercitationem velit ipsa, quidem, quo similique ex porro laboriosam veniam?</p>
+            </div>
+            <div class="elements dsa">
+                <img src="downloaded_img/image_placeholder.png" class="ele_img" />
+                <h1 class="ele_head">lorem3</h1>
+                <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Minima, delectus totam quis veritatis
+                    praesentium aliquam nobis natus id magni eius nostrum repellat doloribus explicabo non
+                    exercitationem velit ipsa, quidem, quo similique ex porro laboriosam veniam?</p>
+                <div class="goto">
+                    <a>Go to the website</a>
+                    <img src="downloaded_img/angle-bracket-right-angle-symbol-angle.jpg" class="goto_icon" />
                 </div>
+            </div>
 
 
-                <div class="elements c">
-                    <img src="" />
-                    <h1 class="ele_head">lorem</h1>
-                    <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Minima, delectus totam quis veritatis
-                        praesentium aliquam nobis natus id magni eius nostrum repellat doloribus explicabo non
-                        exercitationem velit ipsa, quidem, quo similique ex porro laboriosam veniam?</p>
+            <div class="elements c">
+                <img src="downloaded_img/image_placeholder.png" class="ele_img" />
+                <h1 class="ele_head">lorem</h1>
+                <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Minima, delectus totam quis veritatis
+                    praesentium aliquam nobis natus id magni eius nostrum repellat doloribus explicabo non
+                    exercitationem velit ipsa, quidem, quo similique ex porro laboriosam veniam?</p>
+                <div class="goto">
+                    <a>Go to the website</a>
+                    <img src="downloaded_img/angle-bracket-right-angle-symbol-angle.jpg" class="goto_icon" />
                 </div>
-                <div class="elements cpp">
-                    <img src="" />
-                    <h1 class="ele_head">lorem</h1>
-                    <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Minima, delectus totam quis veritatis
-                        praesentium aliquam nobis natus id magni eius nostrum repellat doloribus explicabo non
-                        exercitationem velit ipsa, quidem, quo similique ex porro laboriosam veniam?</p>
+            </div>
+            <div class="elements cpp">
+                <img src="downloaded_img/image_placeholder.png" class="ele_img" />
+                <h1 class="ele_head">lorem</h1>
+                <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Minima, delectus totam quis veritatis
+                    praesentium aliquam nobis natus id magni eius nostrum repellat doloribus explicabo non
+                    exercitationem velit ipsa, quidem, quo similique ex porro laboriosam veniam?</p>
+                <div class="goto">
+                    <a>Go to the website</a>
+                    <img src="downloaded_img/angle-bracket-right-angle-symbol-angle.jpg" class="goto_icon" />
                 </div>
-                <div class="elements python">
-                    <img src="" />
-                    <h1 class="ele_head">lorem</h1>
-                    <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Minima, delectus totam quis veritatis
-                        praesentium aliquam nobis natus id magni eius nostrum repellat doloribus explicabo non
-                        exercitationem velit ipsa, quidem, quo similique ex porro laboriosam veniam?</p>
+            </div>
+            <div class="elements python">
+                <img src="downloaded_img/image_placeholder.png" class="ele_img" />
+                <h1 class="ele_head">lorem</h1>
+                <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Minima, delectus totam quis veritatis
+                    praesentium aliquam nobis natus id magni eius nostrum repellat doloribus explicabo non
+                    exercitationem velit ipsa, quidem, quo similique ex porro laboriosam veniam?</p>
+                <div class="goto">
+                    <a>Go to the website</a>
+                    <img src="downloaded_img/angle-bracket-right-angle-symbol-angle.jpg" class="goto_icon" />
                 </div>
-            
+            </div>
 
 
-                <div class="elements java">
-                    <img src="" />
-                    <h1 class="ele_head">lorem</h1>
-                    <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Minima, delectus totam quis veritatis
-                        praesentium aliquam nobis natus id magni eius nostrum repellat doloribus explicabo non
-                        exercitationem velit ipsa, quidem, quo similique ex porro laboriosam veniam?</p>
+
+            <div class="elements java">
+                <img src="downloaded_img/image_placeholder.png" class="ele_img" />
+                <h1 class="ele_head">lorem</h1>
+                <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Minima, delectus totam quis veritatis
+                    praesentium aliquam nobis natus id magni eius nostrum repellat doloribus explicabo non
+                    exercitationem velit ipsa, quidem, quo similique ex porro laboriosam veniam?</p>
+                <div class="goto">
+                    <a>Go to the website</a>
+                    <img src="downloaded_img/angle-bracket-right-angle-symbol-angle.jpg" class="goto_icon" />
                 </div>
-                <div class="elements sql">
-                    <img src="" />
-                    <h1 class="ele_head">lorem</h1>
-                    <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Minima, delectus totam quis veritatis
-                        praesentium aliquam nobis natus id magni eius nostrum repellat doloribus explicabo non
-                        exercitationem velit ipsa, quidem, quo similique ex porro laboriosam veniam?</p>
+            </div>
+            <div class="elements sql">
+                <img src="downloaded_img/image_placeholder.png" class="ele_img" />
+                <h1 class="ele_head">lorem</h1>
+                <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Minima, delectus totam quis veritatis
+                    praesentium aliquam nobis natus id magni eius nostrum repellat doloribus explicabo non
+                    exercitationem velit ipsa, quidem, quo similique ex porro laboriosam veniam?</p>
+                <div class="goto">
+                    <a>Go to the website</a>
+                    <img src="downloaded_img/angle-bracket-right-angle-symbol-angle.jpg" class="goto_icon" />
                 </div>
-                <div class="elements Git">
-                    <img src="" />
-                    <h1 class="ele_head">lorem</h1>
-                    <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Minima, delectus totam quis veritatis
-                        praesentium aliquam nobis natus id magni eius nostrum repellat doloribus explicabo non
-                        exercitationem velit ipsa, quidem, quo similique ex porro laboriosam veniam?</p>
+            </div>
+            <div class="elements Git">
+                <img src="downloaded_img/image_placeholder.png" class="ele_img" />
+                <h1 class="ele_head">lorem</h1>
+                <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Minima, delectus totam quis veritatis
+                    praesentium aliquam nobis natus id magni eius nostrum repellat doloribus explicabo non
+                    exercitationem velit ipsa, quidem, quo similique ex porro laboriosam veniam?</p>
+                <div class="goto">
+                    <a>Go to the website</a>
+                    <img src="downloaded_img/angle-bracket-right-angle-symbol-angle.jpg" class="goto_icon" />
                 </div>
+            </div>
 
         </section>
 
         <section class="qna_box">
-            <h1>QNA</h1>
+            <h1 class="qna_head">QNA :</h1>
             <div class="qna">
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing?</p>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Eum, atque quidem. Doloribus recusandae aut
+                <p class="quest">Lorem ipsum dolor sit amet consectetur adipisicing?</p>
+                <p class="ans">Lorem ipsum dolor sit amet consectetur adipisicing elit. Eum, atque quidem. Doloribus
+                    recusandae aut
                     quod mollitia deserunt at, voluptates temporibus!</p>
             </div>
             <div class="qna">
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing?</p>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Eum, atque quidem. Doloribus recusandae aut
+                <p class="quest">Lorem ipsum dolor sit amet consectetur adipisicing?</p>
+                <p class="ans">Lorem ipsum dolor sit amet consectetur adipisicing elit. Eum, atque quidem. Doloribus
+                    recusandae aut
                     quod mollitia deserunt at, voluptates temporibus!</p>
             </div>
             <div class="qna">
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing?</p>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Eum, atque quidem. Doloribus recusandae aut
+                <p class="quest">Lorem ipsum dolor sit amet consectetur adipisicing?</p>
+                <p class="ans">Lorem ipsum dolor sit amet consectetur adipisicing elit. Eum, atque quidem. Doloribus
+                    recusandae aut
                     quod mollitia deserunt at, voluptates temporibus!</p>
             </div>
             <div class="qna">
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing?</p>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Eum, atque quidem. Doloribus recusandae aut
+                <p class="quest">Lorem ipsum dolor sit amet consectetur adipisicing?</p>
+                <p class="ans">Lorem ipsum dolor sit amet consectetur adipisicing elit. Eum, atque quidem. Doloribus
+                    recusandae aut
                     quod mollitia deserunt at, voluptates temporibus!</p>
             </div>
             <div class="qna">
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing?</p>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Eum, atque quidem. Doloribus recusandae aut
+                <p class="quest">Lorem ipsum dolor sit amet consectetur adipisicing?</p>
+                <p class="ans">Lorem ipsum dolor sit amet consectetur adipisicing elit. Eum, atque quidem. Doloribus
+                    recusandae aut
                     quod mollitia deserunt at, voluptates temporibus!</p>
             </div>
         </section>
