finalised html and CSS

--- a/index.html
+++ b/index.html
@@ -5,6 +5,9 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Project_1</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@200;400&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="style.css">
 </head>
 
@@ -53,7 +56,7 @@
         <section class="about">
             <div class="abt_head">
                 <h1 class="top">Welcome to </h1>
-                <h1 class="mid">The world of Coding</h1>
+                <h1 class="mid">The World of Coding</h1>
             </div>
 
             <div class="abt_div_content">
@@ -71,13 +74,13 @@
             </div>
         </section>
 
-        <section class="ele_box">
 
+        <section class="ele_box">
 
             <div class="elements hckthon">
                 <div class="ele_div_img"><img src="downloaded_img/image_placeholder.png" class="ele_img" /></div>
                 <h1 class="ele_head">lorem1</h1>
-                <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Minima, delectus totam quis veritatis
+                <p class="ele_p">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Minima, delectus totam quis veritatis
                     praesentium aliquam nobis natus id magni eius nostrum repellat doloribus explicabo non
                     exercitationem velit ipsa, quidem, quo similique ex porro laboriosam veniam?</p>
                 <div class="goto">
@@ -88,7 +91,7 @@
             <div class="elements web">
                 <img src="downloaded_img/image_placeholder.png" class="ele_img" />
                 <h1 class="ele_head">lorem2</h1>
-                <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Minima, delectus totam quis veritatis
+                <p class="ele_p">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Minima, delectus totam quis veritatis
                     praesentium aliquam nobis natus id magni eius nostrum repellat doloribus explicabo non
                     exercitationem velit ipsa, quidem, quo similique ex porro laboriosam veniam?</p>
                 <div class="goto">
@@ -99,7 +102,7 @@
             <div class="elements dsa">
                 <img src="downloaded_img/image_placeholder.png" class="ele_img" />
                 <h1 class="ele_head">lorem3</h1>
-                <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Minima, delectus totam quis veritatis
+                <p class="ele_p">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Minima, delectus totam quis veritatis
                     praesentium aliquam nobis natus id magni eius nostrum repellat doloribus explicabo non
                     exercitationem velit ipsa, quidem, quo similique ex porro laboriosam veniam?</p>
                 <div class="goto">
@@ -112,7 +115,7 @@
             <div class="elements c">
                 <img src="downloaded_img/image_placeholder.png" class="ele_img" />
                 <h1 class="ele_head">lorem</h1>
-                <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Minima, delectus totam quis veritatis
+                <p class="ele_p">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Minima, delectus totam quis veritatis
                     praesentium aliquam nobis natus id magni eius nostrum repellat doloribus explicabo non
                     exercitationem velit ipsa, quidem, quo similique ex porro laboriosam veniam?</p>
                 <div class="goto">
@@ -123,7 +126,7 @@
             <div class="elements cpp">
                 <img src="downloaded_img/image_placeholder.png" class="ele_img" />
                 <h1 class="ele_head">lorem</h1>
-                <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Minima, delectus totam quis veritatis
+                <p class="ele_p">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Minima, delectus totam quis veritatis
                     praesentium aliquam nobis natus id magni eius nostrum repellat doloribus explicabo non
                     exercitationem velit ipsa, quidem, quo similique ex porro laboriosam veniam?</p>
                 <div class="goto">
@@ -134,7 +137,7 @@
             <div class="elements python">
                 <img src="downloaded_img/image_placeholder.png" class="ele_img" />
                 <h1 class="ele_head">lorem</h1>
-                <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Minima, delectus totam quis veritatis
+                <p class="ele_p">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Minima, delectus totam quis veritatis
                     praesentium aliquam nobis natus id magni eius nostrum repellat doloribus explicabo non
                     exercitationem velit ipsa, quidem, quo similique ex porro laboriosam veniam?</p>
                 <div class="goto">
@@ -148,7 +151,7 @@
             <div class="elements java">
                 <img src="downloaded_img/image_placeholder.png" class="ele_img" />
                 <h1 class="ele_head">lorem</h1>
-                <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Minima, delectus totam quis veritatis
+                <p class="ele_p">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Minima, delectus totam quis veritatis
                     praesentium aliquam nobis natus id magni eius nostrum repellat doloribus explicabo non
                     exercitationem velit ipsa, quidem, quo similique ex porro laboriosam veniam?</p>
                 <div class="goto">
@@ -159,7 +162,7 @@
             <div class="elements sql">
                 <img src="downloaded_img/image_placeholder.png" class="ele_img" />
                 <h1 class="ele_head">lorem</h1>
-                <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Minima, delectus totam quis veritatis
+                <p class="ele_p">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Minima, delectus totam quis veritatis
                     praesentium aliquam nobis natus id magni eius nostrum repellat doloribus explicabo non
                     exercitationem velit ipsa, quidem, quo similique ex porro laboriosam veniam?</p>
                 <div class="goto">
@@ -170,7 +173,7 @@
             <div class="elements Git">
                 <img src="downloaded_img/image_placeholder.png" class="ele_img" />
                 <h1 class="ele_head">lorem</h1>
-                <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Minima, delectus totam quis veritatis
+                <p class="ele_p">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Minima, delectus totam quis veritatis
                     praesentium aliquam nobis natus id magni eius nostrum repellat doloribus explicabo non
                     exercitationem velit ipsa, quidem, quo similique ex porro laboriosam veniam?</p>
                 <div class="goto">
@@ -216,15 +219,17 @@
         </section>
     </main>
 
-    <!-- <footer class="foot"> 
-        <div>
-             <img class="logo" src="downloaded_img/unnamed_01.jpg" /> 
+    <footer class="foot">
+        <div class="foot_div">
+            <div>
+                <img class="logo" src="downloaded_img/unnamed_01.jpg" />
+            </div>
+            <div class="name">
+                Name_of_the_website
+            </div>
         </div>
-        <div class="name">
-            Name_of_the_website
-        </div>
-        <div></div>
-     </footer> -->
+        <div class="team_name">By Team_Incognito</div>
+    </footer>
 </body>
 
 </html>
