--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
                 <img class="logo" src="downloaded_img/unnamed_01.jpg" />
             </div>
             <div class="name">
-                Name_of_the_website
+                BASICS OF CODING :)
             </div>
         </div>
 
