--- a/index.html
+++ b/index.html
@@ -4,7 +4,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Project_1</title>
+    <link rel="icon" href="programming-coding-icon-logo-design-template-vector.jpg">
+    <title>Basics of Programming</title>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@200;400&display=swap" rel="stylesheet">
@@ -15,24 +16,24 @@
     <header class="tab">
         <div class="account">
             <div class="img">
-                <img class="logo" src="downloaded_img/unnamed_01.jpg" />
+                <img class="logo" src="programming-coding-icon-logo-design-template-vector.jpg" />
             </div>
             <div class="name">
-                BASICS OF CODING :)
+                BASICS OF PROGRAMMING :)
             </div>
         </div>
 
         <nav class="nav_bar">
             <ul class="nav_ul">
-                <li class="nav_li"><a>lorem</a></li>
-                <li class="nav_li"><a>lorem</a></li>
-                <li class="nav_li"><a>lorem</a></li>
-                <li class="nav_li"><a>lorem</a></li>
+                <li class="nav_li"><a>Home</a></li>
+                <li class="nav_li"><a>Tutorial</a></li>
+                <li class="nav_li"><a>Notes</a></li>
+                <li class="nav_li"><a>Contact</a></li>
             </ul>
         </nav>
         <div class="account">
-            <div class="login">login</div>
-            <div class="login">sign up</div>
+            <div class="login">Login</div>
+            <div class="login">Sign Up</div>
         </div>
 
     </header>
@@ -61,15 +62,7 @@
 
             <div class="abt_div_content">
 
-                <p class="about_p_content">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Est at nulla ut.
-                    Sit
-                    dolorem qui labore, dolore
-                    voluptatibus dolor provident quo vel cupiditate. Vero similique atque laudantium, culpa corrupti
-                    quasi. Lorem ipsum dolor sit amet consectetur adipisicing elit. Culpa eius, incidunt nesciunt minus
-                    ut omnis. Blanditiis debitis similique asperiores recusandae amet dignissimos quaerat ipsa ab
-                    quisquam deserunt a sapiente nemo ullam quasi quo illo omnis minima quibusdam mollitia, error
-                    consectetur minus repellat quia. Cumque tenetur quisquam asperiores. Consectetur soluta non
-                    similique dolorem velit ducimus? Debitis minus totam eos. Voluptatum, est?
+                <p class="about_p_content">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Welcome to Basics of Programming your digital gateway to the essentials of programming! Whether you're a coding novice or looking to strengthen your foundations, our platform is designed to demystify programming, making it accessible to all. Explore our comprehensive resources, tutorials, and interactive content to grasp fundamental concepts, logic building, and problem solving skills the core elements of proficient programming. Join us in unlocking a world of creative possibilities, empowering you to navigate the digital landscape with confidence. Let the coding adventure begin!
                 </p>
             </div>
         </section>
