--- a/index.html
+++ b/index.html
@@ -72,34 +72,28 @@
 
             <div class="elements hckthon">
                 <div class="ele_div_img"><img src="downloaded_img/image_placeholder.png" class="ele_img" /></div>
-                <h1 class="ele_head">lorem1</h1>
-                <p class="ele_p">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Minima, delectus totam quis veritatis
-                    praesentium aliquam nobis natus id magni eius nostrum repellat doloribus explicabo non
-                    exercitationem velit ipsa, quidem, quo similique ex porro laboriosam veniam?</p>
+                <h1 class="ele_head">C</h1>
+                <p class="ele_p">C programming, created by Dennis Ritchie in the early 1970s, stands as one of the foundational languages in computer programming. Renowned for its simplicity and efficiency, C has played a pivotal role in the development of operating systems, embedded systems, and countless software applications. Its syntax, though concise, allows for low-level memory manipulation, offering programmers unparalleled control over system resources</p>
                 <div class="goto">
-                    <a>Go to the website</a>
+                    <a href="https://en.wikipedia.org/wiki/C_(programming_language)">Go to the website</a>
                     <img src="downloaded_img/angle-bracket-right-angle-symbol-angle.jpg" class="goto_icon" />
                 </div>
             </div>
             <div class="elements web">
                 <img src="downloaded_img/image_placeholder.png" class="ele_img" />
-                <h1 class="ele_head">lorem2</h1>
-                <p class="ele_p">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Minima, delectus totam quis veritatis
-                    praesentium aliquam nobis natus id magni eius nostrum repellat doloribus explicabo non
-                    exercitationem velit ipsa, quidem, quo similique ex porro laboriosam veniam?</p>
+                <h1 class="ele_head">C++</h1>
+                <p class="ele_p">C++ is a powerful and versatile programming language that extends the capabilities of the original C language. Developed by Bjarne Stroustrup in the 1980s, C++ introduces object-oriented programming (OOP) concepts, allowing for more organized code development. It combines the efficiency of low-level programming with the flexibility of high-level abstractions, making it suitable for a wide range of applications, from system software to game development</p>
                 <div class="goto">
-                    <a>Go to the website</a>
+                    <a href="https://en.wikipedia.org/wiki/C%2B%2B">Go to the website</a>
                     <img src="downloaded_img/angle-bracket-right-angle-symbol-angle.jpg" class="goto_icon" />
                 </div>
             </div>
             <div class="elements dsa">
                 <img src="downloaded_img/image_placeholder.png" class="ele_img" />
-                <h1 class="ele_head">lorem3</h1>
-                <p class="ele_p">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Minima, delectus totam quis veritatis
-                    praesentium aliquam nobis natus id magni eius nostrum repellat doloribus explicabo non
-                    exercitationem velit ipsa, quidem, quo similique ex porro laboriosam veniam?</p>
+                <h1 class="ele_head">C#</h1>
+                <p class="ele_p">C# is a versatile and modern programming language developed by Microsoft. C# is renowned for its simplicity, type-safety, and object-oriented programming features. It is a key language for developing a wide range of applications, from desktop software to web applications on the .NET framework. With its extensive libraries and strong integration with Microsoft technologies, C# continues to be a popular choice for developers aiming to create efficient and scalable solutions.</p>
                 <div class="goto">
-                    <a>Go to the website</a>
+                    <a href="https://en.wikipedia.org/wiki/C_Sharp_(programming_language)">Go to the website</a>
                     <img src="downloaded_img/angle-bracket-right-angle-symbol-angle.jpg" class="goto_icon" />
                 </div>
             </div>
@@ -107,34 +101,28 @@
 
             <div class="elements c">
                 <img src="downloaded_img/image_placeholder.png" class="ele_img" />
-                <h1 class="ele_head">lorem</h1>
-                <p class="ele_p">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Minima, delectus totam quis veritatis
-                    praesentium aliquam nobis natus id magni eius nostrum repellat doloribus explicabo non
-                    exercitationem velit ipsa, quidem, quo similique ex porro laboriosam veniam?</p>
+                <h1 class="ele_head">Java</h1>
+                <p class="ele_p">Java, a versatile and widely-used programming language, was introduced by Sun Microsystems in 1995. Known for its "write once, run anywhere" philosophy, Java allows developers to create platform-independent applications that can seamlessly run on various devices. With its object-oriented approach, Java simplifies complex coding tasks and promotes code reusability</p>
                 <div class="goto">
-                    <a>Go to the website</a>
+                    <a href="https://en.wikipedia.org/wiki/Java_(programming_language)">Go to the website</a>
                     <img src="downloaded_img/angle-bracket-right-angle-symbol-angle.jpg" class="goto_icon" />
                 </div>
             </div>
             <div class="elements cpp">
                 <img src="downloaded_img/image_placeholder.png" class="ele_img" />
-                <h1 class="ele_head">lorem</h1>
-                <p class="ele_p">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Minima, delectus totam quis veritatis
-                    praesentium aliquam nobis natus id magni eius nostrum repellat doloribus explicabo non
-                    exercitationem velit ipsa, quidem, quo similique ex porro laboriosam veniam?</p>
+                <h1 class="ele_head">Python</h1>
+                <p class="ele_p">Python, a high-level, versatile programming language, has surged in popularity for its readability and simplicity. It has become a go-to language for web development, data analysis, artificial intelligence, and more. With a clear and expressive syntax, Python is beginner-friendly, making it an ideal choice for those new to coding. Its extensive library support and a thriving community contribute to Python's reputation as a powerful tool for building a wide range of applications</p>
                 <div class="goto">
-                    <a>Go to the website</a>
+                    <a href="https://www.python.org/about/gettingstarted/">Go to the website</a>
                     <img src="downloaded_img/angle-bracket-right-angle-symbol-angle.jpg" class="goto_icon" />
                 </div>
             </div>
             <div class="elements python">
                 <img src="downloaded_img/image_placeholder.png" class="ele_img" />
-                <h1 class="ele_head">lorem</h1>
-                <p class="ele_p">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Minima, delectus totam quis veritatis
-                    praesentium aliquam nobis natus id magni eius nostrum repellat doloribus explicabo non
-                    exercitationem velit ipsa, quidem, quo similique ex porro laboriosam veniam?</p>
+                <h1 class="ele_head">PHP</h1>
+                <p class="ele_p">PHP (Hypertext Preprocessor) is a server-side scripting language widely used for web development. Known for its flexibility and simplicity, PHP seamlessly integrates with HTML to create dynamic and interactive web pages. It empowers developers to embed code directly within HTML, facilitating the execution of server-side tasks such as handling forms, managing databases, and generating dynamic content</p>
                 <div class="goto">
-                    <a>Go to the website</a>
+                    <a href="https://en.wikipedia.org/wiki/PHP">Go to the website</a>
                     <img src="downloaded_img/angle-bracket-right-angle-symbol-angle.jpg" class="goto_icon" />
                 </div>
             </div>
@@ -143,34 +131,28 @@
 
             <div class="elements java">
                 <img src="downloaded_img/image_placeholder.png" class="ele_img" />
-                <h1 class="ele_head">lorem</h1>
-                <p class="ele_p">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Minima, delectus totam quis veritatis
-                    praesentium aliquam nobis natus id magni eius nostrum repellat doloribus explicabo non
-                    exercitationem velit ipsa, quidem, quo similique ex porro laboriosam veniam?</p>
+                <h1 class="ele_head">HTML</h1>
+                <p class="ele_p">HTML, or HyperText Markup Language, is the standard markup language used to create and structure content on the World Wide Web. It forms the backbone of web development, providing a framework for designing and presenting information on websites. HTML utilizes a tag-based system, where various tags define the structure and elements of a webpage, such as headings, paragraphs, images, and links</p>
                 <div class="goto">
-                    <a>Go to the website</a>
+                    <a href="https://en.wikipedia.org/wiki/HTML">Go to the website</a>
                     <img src="downloaded_img/angle-bracket-right-angle-symbol-angle.jpg" class="goto_icon" />
                 </div>
             </div>
             <div class="elements sql">
                 <img src="downloaded_img/image_placeholder.png" class="ele_img" />
-                <h1 class="ele_head">lorem</h1>
-                <p class="ele_p">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Minima, delectus totam quis veritatis
-                    praesentium aliquam nobis natus id magni eius nostrum repellat doloribus explicabo non
-                    exercitationem velit ipsa, quidem, quo similique ex porro laboriosam veniam?</p>
+                <h1 class="ele_head">CSS</h1>
+                <p class="ele_p">Cascading Style Sheets (CSS) is a fundamental web technology that enhances the visual presentation of HTML documents. It allows web developers to style and format the layout, colors, and typography of a website, providing a seamless and visually appealing user experience. CSS operates through a rule-based system, where selectors define the HTML elements to be styled, and declarations specify the desired visual properties</p>
                 <div class="goto">
-                    <a>Go to the website</a>
+                    <a href="https://en.wikipedia.org/wiki/CSS">Go to the website</a>
                     <img src="downloaded_img/angle-bracket-right-angle-symbol-angle.jpg" class="goto_icon" />
                 </div>
             </div>
             <div class="elements Git">
                 <img src="downloaded_img/image_placeholder.png" class="ele_img" />
-                <h1 class="ele_head">lorem</h1>
-                <p class="ele_p">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Minima, delectus totam quis veritatis
-                    praesentium aliquam nobis natus id magni eius nostrum repellat doloribus explicabo non
-                    exercitationem velit ipsa, quidem, quo similique ex porro laboriosam veniam?</p>
+                <h1 class="ele_head">JavaScript</h1>
+                <p class="ele_p">JavaScript is a dynamic and versatile programming language primarily used for web development. As a client-side scripting language, JavaScript empowers developers to create interactive and dynamic content within web browsers. Its widespread adoption has made it an integral part of modern web applications, facilitating features such as form validation, asynchronous updates, and interactive user interfaces</p>
                 <div class="goto">
-                    <a>Go to the website</a>
+                    <a href="https://en.wikipedia.org/wiki/JavaScript">Go to the website</a>
                     <img src="downloaded_img/angle-bracket-right-angle-symbol-angle.jpg" class="goto_icon" />
                 </div>
             </div>
