--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
                 <img class="logo" src="programming-coding-icon-logo-design-template-vector.jpg" />
             </div>
             <div class="name">
-                BASICS OF PROGRAMMING :)
+                Basics of programming
             </div>
         </div>
 
@@ -91,7 +91,7 @@
             <div class="elements dsa">
                 <img src="downloaded_img/image_placeholder.png" class="ele_img" />
                 <h1 class="ele_head">C#</h1>
-                <p class="ele_p">C# is a versatile and modern programming language developed by Microsoft. C# is renowned for its simplicity, type-safety, and object-oriented programming features. It is a key language for developing a wide range of applications, from desktop software to web applications on the .NET framework. With its extensive libraries and strong integration with Microsoft technologies, C# continues to be a popular choice for developers aiming to create efficient and scalable solutions.</p>
+                <p class="ele_p">C# is a versatile and modern programming language developed by Microsoft. C# is renowned for its simplicity, type-safety, and object-oriented programming features. It is a key language for developing a wide range of applications, from desktop software to web applications on the .NET framework. With its extensive libraries and strong integration with Microsoft technologies, C# continues to be a popular choice for developers aiming to create efficient and scalable solutions</p>
                 <div class="goto">
                     <a href="https://en.wikipedia.org/wiki/C_Sharp_(programming_language)">Go to the website</a>
                     <img src="downloaded_img/angle-bracket-right-angle-symbol-angle.jpg" class="goto_icon" />
