--- a/index.html
+++ b/index.html
@@ -112,7 +112,7 @@
             <section class="ele_box">
 
                 <div class="elements hckthon">
-                    <div class="ele_div_img"><img src="downloaded_img/image_placeholder.png" class="ele_img" /></div>
+                    <div class="ele_div_img"><img src="assets_of_page/image_placeholder.png" class="ele_img" /></div>
                     <h1 class="ele_head">C</h1>
                     <p class="ele_p">C programming, created by Dennis Ritchie in the early 1970s, stands as one of the
                         foundational languages in computer programming. Renowned for its simplicity and efficiency, C
@@ -125,7 +125,7 @@
                     </div>
                 </div>
                 <div class="elements web">
-                    <img src="downloaded_img/image_placeholder.png" class="ele_img" />
+                    <img src="assets_of_page/image_placeholder.png" class="ele_img" />
                     <h1 class="ele_head">C++</h1>
                     <p class="ele_p">C++ is a powerful and versatile programming language that extends the capabilities
                         of the original C language. Developed by Bjarne Stroustrup in the 1980s, C++ introduces
@@ -139,7 +139,7 @@
                     </div>
                 </div>
                 <div class="elements dsa">
-                    <img src="downloaded_img/image_placeholder.png" class="ele_img" />
+                    <img src="assets_of_page/image_placeholder.png" class="ele_img" />
                     <h1 class="ele_head">C#</h1>
                     <p class="ele_p">C# is a versatile and modern programming language developed by Microsoft. C# is
                         renowned for its simplicity, type-safety, and object-oriented programming features. It is a key
@@ -155,7 +155,7 @@
 
 
                 <div class="elements c">
-                    <img src="downloaded_img/image_placeholder.png" class="ele_img" />
+                    <img src="assets_of_page/image_placeholder.png" class="ele_img" />
                     <h1 class="ele_head">Java</h1>
                     <p class="ele_p">Java, a versatile and widely-used programming language, was introduced by Sun
                         Microsystems in 1995. Known for its "write once, run anywhere" philosophy, Java allows
@@ -168,7 +168,7 @@
                     </div>
                 </div>
                 <div class="elements cpp">
-                    <img src="downloaded_img/image_placeholder.png" class="ele_img" />
+                    <img src="assets_of_page/image_placeholder.png" class="ele_img" />
                     <h1 class="ele_head">Python</h1>
                     <p class="ele_p">Python, a high-level, versatile programming language, has surged in popularity for
                         its readability and simplicity. It has become a go-to language for web development, data
@@ -182,7 +182,7 @@
                     </div>
                 </div>
                 <div class="elements python">
-                    <img src="downloaded_img/image_placeholder.png" class="ele_img" />
+                    <img src="assets_of_page/image_placeholder.png" class="ele_img" />
                     <h1 class="ele_head">PHP</h1>
                     <p class="ele_p">PHP (Hypertext Preprocessor) is a server-side scripting language widely used for
                         web development. Known for its flexibility and simplicity, PHP seamlessly integrates with HTML
@@ -198,7 +198,7 @@
 
 
                 <div class="elements java">
-                    <img src="downloaded_img/image_placeholder.png" class="ele_img" />
+                    <img src="assets_of_page/image_placeholder.png" class="ele_img" />
                     <h1 class="ele_head">HTML</h1>
                     <p class="ele_p">HTML, or HyperText Markup Language, is the standard markup language used to create
                         and structure content on the World Wide Web. It forms the backbone of web development, providing
@@ -206,12 +206,12 @@
                         system, where various tags define the structure and elements of a webpage, such as headings,
                         paragraphs, images, and links</p>
                     <div class="goto">
-                        <a href="https://en.wikipedia.org/wiki/HTML">Go to the website</a>
+                        <a href="https://developer.mozilla.org/">Go to the website</a>
                         <img src="downloaded_img/angle-bracket-right-angle-symbol-angle.jpg" class="goto_icon" />
                     </div>
                 </div>
                 <div class="elements sql">
-                    <img src="downloaded_img/image_placeholder.png" class="ele_img" />
+                    <img src="assets_of_page/image_placeholder.png" class="ele_img" />
                     <h1 class="ele_head">CSS</h1>
                     <p class="ele_p">Cascading Style Sheets (CSS) is a fundamental web technology that enhances the
                         visual presentation of HTML documents. It allows web developers to style and format the layout,
@@ -219,12 +219,12 @@
                         experience. CSS operates through a rule-based system, where selectors define the HTML elements
                         to be styled, and declarations specify the desired visual properties</p>
                     <div class="goto">
-                        <a href="https://en.wikipedia.org/wiki/CSS">Go to the website</a>
+                        <a href="https://developer.mozilla.org/">Go to the website</a>
                         <img src="downloaded_img/angle-bracket-right-angle-symbol-angle.jpg" class="goto_icon" />
                     </div>
                 </div>
                 <div class="elements Git">
-                    <img src="downloaded_img/image_placeholder.png" class="ele_img" />
+                    <img src="assets_of_page/image_placeholder.png" class="ele_img" />
                     <h1 class="ele_head">JavaScript</h1>
                     <p class="ele_p">JavaScript is a dynamic and versatile programming language primarily used for web
                         development. As a client-side scripting language, JavaScript empowers developers to create
@@ -232,7 +232,7 @@
                         integral part of modern web applications, facilitating features such as form validation,
                         asynchronous updates, and interactive user interfaces</p>
                     <div class="goto">
-                        <a href="https://en.wikipedia.org/wiki/JavaScript">Go to the website</a>
+                        <a href="https://developer.mozilla.org/">Go to the website</a>
                         <img src="downloaded_img/angle-bracket-right-angle-symbol-angle.jpg" class="goto_icon" />
                     </div>
                 </div>
@@ -277,7 +277,7 @@
             <footer class="foot">
                 <div class="foot_div">
                     <div>
-                        <img class="logo" src="downloaded_img/unnamed_01.jpg" />
+                        <img class="logo" src="assets_of_page/programming-coding-icon-logo-design-template-vector.jpg" />
                     </div>
                     <div class="name">
                         Basics of Programming
