--- a/index.html
+++ b/index.html
@@ -112,7 +112,7 @@
             <section class="ele_box">
 
                 <div class="elements hckthon">
-                    <div class="ele_div_img"><img src="assets_of_page/image_placeholder.png" class="ele_img" /></div>
+                    <div class="ele_div_img"><img src="c-langu.webp" class="ele_img" /></div>
                     <h1 class="ele_head">C</h1>
                     <p class="ele_p">C programming, created by Dennis Ritchie in the early 1970s, stands as one of the
                         foundational languages in computer programming. Renowned for its simplicity and efficiency, C
@@ -125,7 +125,7 @@
                     </div>
                 </div>
                 <div class="elements web">
-                    <img src="assets_of_page/image_placeholder.png" class="ele_img" />
+                    <img src="cplus.jpeg" class="ele_img" />
                     <h1 class="ele_head">C++</h1>
                     <p class="ele_p">C++ is a powerful and versatile programming language that extends the capabilities
                         of the original C language. Developed by Bjarne Stroustrup in the 1980s, C++ introduces
@@ -139,7 +139,7 @@
                     </div>
                 </div>
                 <div class="elements dsa">
-                    <img src="assets_of_page/image_placeholder.png" class="ele_img" />
+                    <img src="hash.png" class="ele_img" />
                     <h1 class="ele_head">C#</h1>
                     <p class="ele_p">C# is a versatile and modern programming language developed by Microsoft. C# is
                         renowned for its simplicity, type-safety, and object-oriented programming features. It is a key
@@ -155,7 +155,7 @@
 
 
                 <div class="elements c">
-                    <img src="assets_of_page/image_placeholder.png" class="ele_img" />
+                    <img src="jav.png" class="ele_img" />
                     <h1 class="ele_head">Java</h1>
                     <p class="ele_p">Java, a versatile and widely-used programming language, was introduced by Sun
                         Microsystems in 1995. Known for its "write once, run anywhere" philosophy, Java allows
@@ -168,7 +168,7 @@
                     </div>
                 </div>
                 <div class="elements cpp">
-                    <img src="assets_of_page/image_placeholder.png" class="ele_img" />
+                    <img src="pytho3.png" class="ele_img" />
                     <h1 class="ele_head">Python</h1>
                     <p class="ele_p">Python, a high-level, versatile programming language, has surged in popularity for
                         its readability and simplicity. It has become a go-to language for web development, data
@@ -182,7 +182,7 @@
                     </div>
                 </div>
                 <div class="elements python">
-                    <img src="assets_of_page/image_placeholder.png" class="ele_img" />
+                    <img src="php2.webp" class="ele_img" />
                     <h1 class="ele_head">PHP</h1>
                     <p class="ele_p">PHP (Hypertext Preprocessor) is a server-side scripting language widely used for
                         web development. Known for its flexibility and simplicity, PHP seamlessly integrates with HTML
@@ -198,7 +198,7 @@
 
 
                 <div class="elements java">
-                    <img src="assets_of_page/image_placeholder.png" class="ele_img" />
+                    <img src="html5-logo-for-web-development.webp" class="ele_img" />
                     <h1 class="ele_head">HTML</h1>
                     <p class="ele_p">HTML, or HyperText Markup Language, is the standard markup language used to create
                         and structure content on the World Wide Web. It forms the backbone of web development, providing
@@ -211,7 +211,7 @@
                     </div>
                 </div>
                 <div class="elements sql">
-                    <img src="assets_of_page/image_placeholder.png" class="ele_img" />
+                    <img src="css-logo-0.webp" class="ele_img" />
                     <h1 class="ele_head">CSS</h1>
                     <p class="ele_p">Cascading Style Sheets (CSS) is a fundamental web technology that enhances the
                         visual presentation of HTML documents. It allows web developers to style and format the layout,
@@ -224,7 +224,7 @@
                     </div>
                 </div>
                 <div class="elements Git">
-                    <img src="assets_of_page/image_placeholder.png" class="ele_img" />
+                    <img src="javascript-logo.jpg" class="ele_img" />
                     <h1 class="ele_head">JavaScript</h1>
                     <p class="ele_p">JavaScript is a dynamic and versatile programming language primarily used for web
                         development. As a client-side scripting language, JavaScript empowers developers to create
@@ -242,34 +242,35 @@
             <section class="qna_box">
                 <h1 class="qna_head">QNA :</h1>
                 <div class="qna">
-                    <p class="quest">Lorem ipsum dolor sit amet consectetur adipisicing?</p>
-                    <p class="ans">Lorem ipsum dolor sit amet consectetur adipisicing elit. Eum, atque quidem. Doloribus
-                        recusandae aut
-                        quod mollitia deserunt at, voluptates temporibus!</p>
+                    <p class="quest">Why should I learn coding?</p>
+                    <p class="ans">Coding could be a good option if working in technology appeals to you.
+                         If you enjoy thinking logically to solve puzzles and engaging in the creative side
+                          of your mind to develop new programs and apps, then coding could be an ideal career.</p>
                 </div>
                 <div class="qna">
-                    <p class="quest">Lorem ipsum dolor sit amet consectetur adipisicing?</p>
-                    <p class="ans">Lorem ipsum dolor sit amet consectetur adipisicing elit. Eum, atque quidem. Doloribus
-                        recusandae aut
-                        quod mollitia deserunt at, voluptates temporibus!</p>
+                    <p class="quest">What is frontend and backend in web-development?</p>
+                    <p class="ans">The frontend is what your users see and includes visual elements like buttons, 
+                        checkboxes, graphics, and text messages. It allows your users to interact with your application.
+                         The backend is the data and infrastructure that make your application work. It stores and
+                          processes application data for your users.</p>
                 </div>
                 <div class="qna">
-                    <p class="quest">Lorem ipsum dolor sit amet consectetur adipisicing?</p>
-                    <p class="ans">Lorem ipsum dolor sit amet consectetur adipisicing elit. Eum, atque quidem. Doloribus
-                        recusandae aut
-                        quod mollitia deserunt at, voluptates temporibus!</p>
+                    <p class="quest">What are the languages that I need to know inorder  to create a website?</p>
+                    <p class="ans">If you're interested in developing websites, you'll inevitably be using HTML 
+                        (HyperText Markup Language) and CSS (Cascading Style Sheets). HTML is the standard language 
+                        used to create basic web pages, and CSS is a language used to add style (layout, color, fonts, etc.)
+                         to the documents you create with HTML.</p>
                 </div>
                 <div class="qna">
-                    <p class="quest">Lorem ipsum dolor sit amet consectetur adipisicing?</p>
-                    <p class="ans">Lorem ipsum dolor sit amet consectetur adipisicing elit. Eum, atque quidem. Doloribus
-                        recusandae aut
-                        quod mollitia deserunt at, voluptates temporibus!</p>
+                    <p class="quest">What are the languages used in the development of games?</p>
+                    <p class="ans">Key languages include C++, C#, and Python, which are widely used for their performance and 
+                        game engine support. Java and JavaScript are popular for web-based gaming app development solutions.</p>
                 </div>
                 <div class="qna">
-                    <p class="quest">Lorem ipsum dolor sit amet consectetur adipisicing?</p>
-                    <p class="ans">Lorem ipsum dolor sit amet consectetur adipisicing elit. Eum, atque quidem. Doloribus
-                        recusandae aut
-                        quod mollitia deserunt at, voluptates temporibus!</p>
+                    <p class="quest">What is the difference between C and C++?</p>
+                    <p class="ans">The main difference between C and C++ is that C is function-driven procedural language with 
+                        no support for objects and classes, whereas C++ is a combination of procedural and object-oriented
+                         programming languages.</p>
                 </div>
             </section>
 
