--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 
 
     <header class="tab">
-
+        
         <div class="hamburg">
             <img width="40" src="assets_of_page/hamburger.svg" alt="">
         </div>
@@ -72,8 +72,8 @@
                     Account Settings
                 </div>
                 <div class="account_nav">
-                    <div class="login_nav">Login</div>
-                    <div class="login_nav">Sign Up</div>
+                    <div class="login_nav"> <a href="http://localhost:3000/views/login">Login</a></div>
+                    <div class="login_nav"> Sign Up</div>
                 </div>
             </div>
 
@@ -112,7 +112,7 @@
             <section class="ele_box">
 
                 <div class="elements hckthon">
-                    <div class="ele_div_img"><img src="downloaded_img/image_placeholder.png" class="ele_img" /></div>
+                    <div class="ele_div_img"><img src="assets_of_page/c-langu.webp" class="ele_img" /></div>
                     <h1 class="ele_head">C</h1>
                     <p class="ele_p">C programming, created by Dennis Ritchie in the early 1970s, stands as one of the
                         foundational languages in computer programming. Renowned for its simplicity and efficiency, C
@@ -125,7 +125,7 @@
                     </div>
                 </div>
                 <div class="elements web">
-                    <img src="downloaded_img/image_placeholder.png" class="ele_img" />
+                    <img src="assets_of_page/cplus.jpeg" class="ele_img" />
                     <h1 class="ele_head">C++</h1>
                     <p class="ele_p">C++ is a powerful and versatile programming language that extends the capabilities
                         of the original C language. Developed by Bjarne Stroustrup in the 1980s, C++ introduces
@@ -139,7 +139,7 @@
                     </div>
                 </div>
                 <div class="elements dsa">
-                    <img src="downloaded_img/image_placeholder.png" class="ele_img" />
+                    <img src="assets_of_page/hash.png" class="ele_img" />
                     <h1 class="ele_head">C#</h1>
                     <p class="ele_p">C# is a versatile and modern programming language developed by Microsoft. C# is
                         renowned for its simplicity, type-safety, and object-oriented programming features. It is a key
@@ -155,7 +155,7 @@
 
 
                 <div class="elements c">
-                    <img src="downloaded_img/image_placeholder.png" class="ele_img" />
+                    <img src="assets_of_page/jav.png" class="ele_img" />
                     <h1 class="ele_head">Java</h1>
                     <p class="ele_p">Java, a versatile and widely-used programming language, was introduced by Sun
                         Microsystems in 1995. Known for its "write once, run anywhere" philosophy, Java allows
@@ -168,7 +168,7 @@
                     </div>
                 </div>
                 <div class="elements cpp">
-                    <img src="downloaded_img/image_placeholder.png" class="ele_img" />
+                    <img src="assets_of_page/pytho3.png" class="ele_img" />
                     <h1 class="ele_head">Python</h1>
                     <p class="ele_p">Python, a high-level, versatile programming language, has surged in popularity for
                         its readability and simplicity. It has become a go-to language for web development, data
@@ -182,7 +182,7 @@
                     </div>
                 </div>
                 <div class="elements python">
-                    <img src="downloaded_img/image_placeholder.png" class="ele_img" />
+                    <img src="assets_of_page/php2.webp" class="ele_img" />
                     <h1 class="ele_head">PHP</h1>
                     <p class="ele_p">PHP (Hypertext Preprocessor) is a server-side scripting language widely used for
                         web development. Known for its flexibility and simplicity, PHP seamlessly integrates with HTML
@@ -198,7 +198,7 @@
 
 
                 <div class="elements java">
-                    <img src="downloaded_img/image_placeholder.png" class="ele_img" />
+                    <img src="assets_of_page/html5-logo-for-web-development.webp" class="ele_img" />
                     <h1 class="ele_head">HTML</h1>
                     <p class="ele_p">HTML, or HyperText Markup Language, is the standard markup language used to create
                         and structure content on the World Wide Web. It forms the backbone of web development, providing
@@ -206,12 +206,12 @@
                         system, where various tags define the structure and elements of a webpage, such as headings,
                         paragraphs, images, and links</p>
                     <div class="goto">
-                        <a href="https://en.wikipedia.org/wiki/HTML">Go to the website</a>
+                        <a href="https://developer.mozilla.org/en-US/docs/Web/HTML">Go to the website</a>
                         <img src="downloaded_img/angle-bracket-right-angle-symbol-angle.jpg" class="goto_icon" />
                     </div>
                 </div>
                 <div class="elements sql">
-                    <img src="downloaded_img/image_placeholder.png" class="ele_img" />
+                    <img src="assets_of_page/css-logo-0.webp" class="ele_img" />
                     <h1 class="ele_head">CSS</h1>
                     <p class="ele_p">Cascading Style Sheets (CSS) is a fundamental web technology that enhances the
                         visual presentation of HTML documents. It allows web developers to style and format the layout,
@@ -219,12 +219,12 @@
                         experience. CSS operates through a rule-based system, where selectors define the HTML elements
                         to be styled, and declarations specify the desired visual properties</p>
                     <div class="goto">
-                        <a href="https://en.wikipedia.org/wiki/CSS">Go to the website</a>
+                        <a href="https://developer.mozilla.org/en-US/docs/Web/CSS">Go to the website</a>
                         <img src="downloaded_img/angle-bracket-right-angle-symbol-angle.jpg" class="goto_icon" />
                     </div>
                 </div>
                 <div class="elements Git">
-                    <img src="downloaded_img/image_placeholder.png" class="ele_img" />
+                    <img src="assets_of_page/javascript-logo.jpg" class="ele_img" />
                     <h1 class="ele_head">JavaScript</h1>
                     <p class="ele_p">JavaScript is a dynamic and versatile programming language primarily used for web
                         development. As a client-side scripting language, JavaScript empowers developers to create
@@ -232,7 +232,7 @@
                         integral part of modern web applications, facilitating features such as form validation,
                         asynchronous updates, and interactive user interfaces</p>
                     <div class="goto">
-                        <a href="https://en.wikipedia.org/wiki/JavaScript">Go to the website</a>
+                        <a href="https://developer.mozilla.org/en-US/docs/Web/javascript">Go to the website</a>
                         <img src="downloaded_img/angle-bracket-right-angle-symbol-angle.jpg" class="goto_icon" />
                     </div>
                 </div>
@@ -242,34 +242,35 @@
             <section class="qna_box">
                 <h1 class="qna_head">QNA :</h1>
                 <div class="qna">
-                    <p class="quest">Lorem ipsum dolor sit amet consectetur adipisicing?</p>
-                    <p class="ans">Lorem ipsum dolor sit amet consectetur adipisicing elit. Eum, atque quidem. Doloribus
-                        recusandae aut
-                        quod mollitia deserunt at, voluptates temporibus!</p>
+                    <p class="quest">Why should I learn coding?</p>
+                    <p class="ans">Coding could be a good option if working in technology appeals to you.
+                         If you enjoy thinking logically to solve puzzles and engaging in the creative side
+                          of your mind to develop new programs and apps, then coding could be an ideal career.</p>
                 </div>
                 <div class="qna">
-                    <p class="quest">Lorem ipsum dolor sit amet consectetur adipisicing?</p>
-                    <p class="ans">Lorem ipsum dolor sit amet consectetur adipisicing elit. Eum, atque quidem. Doloribus
-                        recusandae aut
-                        quod mollitia deserunt at, voluptates temporibus!</p>
+                    <p class="quest">What is frontend and backend in web-development?</p>
+                    <p class="ans">The frontend is what your users see and includes visual elements like buttons, 
+                        checkboxes, graphics, and text messages. It allows your users to interact with your application.
+                         The backend is the data and infrastructure that make your application work. It stores and
+                          processes application data for your users.</p>
                 </div>
                 <div class="qna">
-                    <p class="quest">Lorem ipsum dolor sit amet consectetur adipisicing?</p>
-                    <p class="ans">Lorem ipsum dolor sit amet consectetur adipisicing elit. Eum, atque quidem. Doloribus
-                        recusandae aut
-                        quod mollitia deserunt at, voluptates temporibus!</p>
+                    <p class="quest">What are the languages that I need to know inorder  to create a website?</p>
+                    <p class="ans">If you're interested in developing websites, you'll inevitably be using HTML 
+                        (HyperText Markup Language) and CSS (Cascading Style Sheets). HTML is the standard language 
+                        used to create basic web pages, and CSS is a language used to add style (layout, color, fonts, etc.)
+                         to the documents you create with HTML.</p>
                 </div>
                 <div class="qna">
-                    <p class="quest">Lorem ipsum dolor sit amet consectetur adipisicing?</p>
-                    <p class="ans">Lorem ipsum dolor sit amet consectetur adipisicing elit. Eum, atque quidem. Doloribus
-                        recusandae aut
-                        quod mollitia deserunt at, voluptates temporibus!</p>
+                    <p class="quest">What are the languages used in the development of games?</p>
+                    <p class="ans">Key languages include C++, C#, and Python, which are widely used for their performance and 
+                        game engine support. Java and JavaScript are popular for web-based gaming app development solutions.</p>
                 </div>
                 <div class="qna">
-                    <p class="quest">Lorem ipsum dolor sit amet consectetur adipisicing?</p>
-                    <p class="ans">Lorem ipsum dolor sit amet consectetur adipisicing elit. Eum, atque quidem. Doloribus
-                        recusandae aut
-                        quod mollitia deserunt at, voluptates temporibus!</p>
+                    <p class="quest">What is the difference between C and C++?</p>
+                    <p class="ans">The main difference between C and C++ is that C is function-driven procedural language with 
+                        no support for objects and classes, whereas C++ is a combination of procedural and object-oriented
+                         programming languages.</p>
                 </div>
             </section>
 
@@ -277,7 +278,7 @@
             <footer class="foot">
                 <div class="foot_div">
                     <div>
-                        <img class="logo" src="downloaded_img/unnamed_01.jpg" />
+                        <img class="logo" src="assets_of_page/programming-coding-icon-logo-design-template-vector.jpg" />
                     </div>
                     <div class="name">
                         Basics of Programming
